text on mobile not visible - fix 2

--- a/main.css
+++ b/main.css
@@ -167,7 +167,7 @@ p {
   }
 
   .grid-item-text {
-    bottom: -25%;
+    bottom: -20%;
     left: 50%;
     transform: translateX(-50%);
     color: #c1a05a;
@@ -192,7 +192,7 @@ p {
   .grid-item:hover .grid-item-text {
     opacity: 1;
     text-shadow: 0px 1px 1px #333;
-    bottom: 0;
+    bottom: -20%;
   }
 
   .footer p {
